# otr

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  REUSE.toml
.reuse/: dep5
common/: Cargo.toml
common/src/: lib.rs
common/src/video/: dirs.rs  mod.rs
otr/: Cargo.toml
otr-utils/: Cargo.toml
otr-utils/src/: decoding.rs  dirs.rs  info.rs  lib.rs
otr-utils/src/cutting/: cutlist.rs  ffmpeg.rs  info.rs  interval.rs  mkvmerge.rs  mod.rs
otr/src/: cli.rs  main.rs
pkg/: PKGBUILD
resources/: otr.desktop  otrkey_mime.xml
src/: cfg.rs  cli.rs  cut.rs  decode.rs  main.rs  video.rs
src/video/: cfg.rs  collecting.rs  cutlist.rs  cutting.rs  decoding.rs  dirs.rs  mod.rs
src/video/cutting/: cutlist.rs  mkvmerge.rs  mod.rs
