[package]
name = "otr"
version = "0.9.0"
authors = ["Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
description = "otr decodes and cuts video files that were downloaded from Online TV Recorder <https://onlinetvrecorder.com/>"
readme = "README.md"
homepage = "https://gitlab.com/mipimipi/otr"
repository = "https://gitlab.com/mipimipi/otr"
keywords = ["cli", "online-tv-recorder", "videos", "otrkey", "decode"]
categories = ["command-line-utilities", "multimedia::video", "encoding"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.21"
blowfish = "0.8"
block-modes = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
dirs = "5"
hex = "0.4"
indoc = "2"
itertools = "0.12"
lazy_static = "1"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"]}
md-5 = "0.10"
once_cell = "1"
print_logger = { version = "0.2" }
quick-xml = { version = "0.31", features = ["serialize"] }
rand = "0.8"
random-string = "1"
rayon = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
rust-ini = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
