# SPDX-FileCopyrightText: 2022-2025 Michael Picht <mipi@fsfe.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "otr"
version = "0.11.7"
authors = ["Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
description = "otr decodes and cuts video files that were downloaded from Online TV Recorder <https://onlinetvrecorder.com/>"
readme = "README.md"
homepage = "https://gitlab.com/mipimipi/otr"
repository = "https://gitlab.com/mipimipi/otr"
keywords = ["cli", "online-tv-recorder", "videos", "otrkey", "decode"]
categories = ["command-line-utilities", "multimedia::video", "encoding"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
dirs = "5"
indoc = "2"
itertools = "0.14"
lazy_static = "1"
log = "0.4"
once_cell = "1"
otr-utils = ">=0.3"
print_logger = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
