[package]
name = "common"
version = "0.9.0"
authors = ["Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
description = "tooling for decoding and cutting of video files that were downloaded from Online TV Recorder <https://onlinetvrecorder.com/>"
readme = "README.md"
homepage = "https://gitlab.com/mipimipi/otr"
repository = "https://gitlab.com/mipimipi/otr"
keywords = ["online-tv-recorder", "videos", "otrkey", "decode"]
categories = ["multimedia::video", "encoding"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
const_format = "0.2"
dirs = "5"
lazy_static = "1"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
once_cell = "1"
otr-utils = "0"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
