[package]
name = "otr-utils"
version = "0.10.2"
authors = ["Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
description = "utilities for decoding and cutting video files that were downloaded from Online TV Recorder <https://onlinetvrecorder.com/>"
readme = "README.md"
homepage = "https://gitlab.com/mipimipi/otr"
repository = "https://gitlab.com/mipimipi/otr"
keywords = ["online-tv-recorder", "videos", "otrkey", "decode"]
categories = ["multimedia::video", "encoding"]
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
blowfish = "0.8"
block-modes = "0.8"
chrono = "0.4"
const_format = "0.2"
dirs = "5"
duct = "0.13"

# TODO: Switch to publicly available version. Workaround is required since this
#       crate is outdated on crates.io. Issue in upstream repo is created:
#       https://github.com/rust-av/ffms2-rs/issues/32
ffms2 = { git = "https://github.com/rust-av/ffms2-rs"}

ffprobe = "0.4"
hex = "0.4"
lazy_static = "1"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
md-5 = "0.10"
once_cell = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
rand = "0.8"
random-string = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
rust-ini = "0.21"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
