[package]
name = "otr"
version = "0.10.0"
authors = ["Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
description = "otr decodes and cuts video files that were downloaded from Online TV Recorder <https://onlinetvrecorder.com/>"
readme = "README.md"
homepage = "https://gitlab.com/mipimipi/otr"
repository = "https://gitlab.com/mipimipi/otr"
keywords = ["cli", "online-tv-recorder", "videos", "otrkey", "decode"]
categories = ["command-line-utilities", "multimedia::video", "encoding"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indoc = "2"
itertools = "0.12"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"]}
once_cell = "1"
otr-utils = { path = "../otr-utils" }
print_logger = { version = "0.2" }
regex = "1"
common = { path = "../common" }